# mlibc

./: meson.build
abis/mieros/: errno.h  fcntl.h  ioctls.h  limits.h  poll.h  seek-whence.h  signal.h  stat.h  termios.h  vm-flags.h  wait.h
sysdeps/mieros/: meson.build
sysdeps/mieros/generic/: entry.cpp  io.cpp  mem.cpp  signals.cpp  system.cpp  thread.cpp
sysdeps/mieros/include/abi-bits/: auxv.h  errno.h  fcntl.h  ioctls.h  limits.h  poll.h  seek-whence.h  signal.h  stat.h  termios.h  vm-flags.h  wait.h
sysdeps/mieros/include/mieros/: syscall.h
sysdeps/mieros/include/sys/: syscall.h
sysdeps/mieros/x86_64/: crt0.s  signals.S
sysdeps/mieros/x86_64/crt/: Scrt1.s  crt0.s
